changed images and order

--- a/code/index.html
+++ b/code/index.html
@@ -48,7 +48,7 @@
       <div class="big-news-container">
         <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/:hover">
           <div>
-            <img src="https://images.unsplash.com/photo-1548092372-0d1bd40894a3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2100&q=80" alt="">
+            <img src="https://images.unsplash.com/photo-1457131760772-7017c6180f05?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2072&q=80https://images.unsplash.com/photo-1457131760772-7017c6180f05?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2072&q=80" alt="">
           </div>
           <div>
             <h3>How to :hover</h3>
@@ -61,13 +61,13 @@
       </div>
       
       <div class="big-news-container">
-        <a href="https://www.pinterest.com/loverenovations/home-office-ideas/">
+        <a href="https://www.technigo.io">
           <div>
-            <img src="https://images.unsplash.com/photo-1496171367470-9ed9a91ea931?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2100&q=80" alt="">
+            <img src="https://images.unsplash.com/photo-1543616991-75a2c125ff5b?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2100&q=80" alt="">
           </div>
 
           <div>
-              <h3>THE BEST HOME OFFICE</h3>
+              <h3>Find Your Passion</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
@@ -80,39 +80,7 @@
 
     <section class="small-news">
       <!-- The other news  -->
-      <div class="small-news-container">
-        <a href="https://css-tricks.com">
-          <img src="https://images.unsplash.com/photo-1564865878688-9a244444042a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2100&q=80" alt="Eat sleep code repeat">
-          <div class="small-text">
-            <h3>CSS tricks and tips</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
-        </a>
-      </div>
-
-      <div class="small-news-container">
-        <a href="https://www.freecodecamp.org/news/javascript-hacks/">
-          <img src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2100&q=80" alt="">
-          <div class="small-text">
-            <h3>10 JavaScript Hacks Every Web Developer Should Know</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
-        </a>
-      </div>
-
-      <div class="small-news-container">
-        <a href="https://www.google.com">
-          <img src="https://images.unsplash.com/photo-1551808525-51a94da548ce?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1896&q=80" alt="">
-          <div class="small-text">
-            <h3>A Developer's Best Friend</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
-        </a>
-     </div>
-
+      
       <div class="small-news-container">
         <a href="https://www.figma.com">
           <img src="https://images.unsplash.com/photo-1509343256512-d77a5cb3791b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2100&q=80" alt="">
@@ -125,10 +93,10 @@
       </div>
 
       <div class="small-news-container">
-        <a href="https://www.github.com">
-          <img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?ixid=MXwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2100&q=80" alt="">
+        <a href="https://stackoverflow.com/c/technigo/questions">
+          <img src="https://images.unsplash.com/photo-1469571486292-0ba58a3f068b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2100&q=80" alt="">
           <div class="small-text">
-            <h3>The Git to the Hub</h3>
+            <h3>Ask the Dev Community</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
@@ -136,10 +104,10 @@
       </div>
 
       <div class="small-news-container">
-        <a href="https://www.canva.com/learn/best-professional-fonts-use-website/">
-          <img src="https://images.unsplash.com/photo-1525972292986-69295aebf4cc?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2100&q=80" alt="">
+        <a href="https://soshace.com/what-is-mentorship-in-web-development/">
+          <img src="https://images.unsplash.com/photo-1526958097901-5e6d742d3371?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2100&q=80" alt="">
           <div class="small-text">
-            <h3>The best professional fonts to use for your website</h3>
+            <h3>Find A Mentor</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
@@ -169,10 +137,43 @@
       </div>
 
       <div class="small-news-container">
-        <a href="https://stackoverflow.com/c/technigo/questions">
-          <img src="https://images.unsplash.com/photo-1469571486292-0ba58a3f068b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2100&q=80" alt="">
+        <a href="https://www.remoteyear.com/blog/top-8-remote-work-tips">
+          <img src="https://images.unsplash.com/photo-1520266573592-734df6e1fb08?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2100&q=80" alt="">
           <div class="small-text">
-            <h3>Ask A Dev Friend</h3>
+            <h3>How to Work Remote</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="small-news-container">
+        <a href="https://css-tricks.com">
+          <img src="https://images.unsplash.com/photo-1564865878688-9a244444042a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2100&q=80" alt="Eat sleep code repeat">
+          <div class="small-text">
+            <h3>CSS tricks and tips</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="small-news-container">
+        <a href="https://www.freecodecamp.org/news/javascript-hacks/">
+          <img src="https://images.unsplash.com/photo-1483478550801-ceba5fe50e8e?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2100&q=80" alt="">
+          <div class="small-text">
+            <h3>10 JavaScript Hacks Every Web Developer Should Know</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="small-news-container">
+        <a href="https://www.github.com">
+          <img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?ixid=MXwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2100&q=80" alt="">
+          <div class="small-text">
+            <h3>The Git to the Hub</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
@@ -181,7 +182,7 @@
 
       <div class="small-news-container">
         <a href="https://www.canva.com/learn/best-professional-fonts-use-website/">
-          <img src="https://images.unsplash.com/photo-1526374965328-7f61d4dc18c5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2100&q=80" alt="">
+          <img src="https://images.unsplash.com/photo-1525972292986-69295aebf4cc?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2100&q=80" alt="">
           <div class="small-text">
             <h3>The best professional fonts to use for your website</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -191,26 +192,28 @@
       </div>
 
       <div class="small-news-container">
-        <a href="https://se.linkedin.com/jobs/frontend-developer-jobs?position=1&pageNum=0">
-          <img src="https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2104&q=80" alt="">
+        <a href="https://webprofessionals.org/best-practices-in-web-design-thinking-outside-the-box/">
+          <img src="https://images.unsplash.com/photo-1570116908808-4eeb66d9bb1e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1867&q=80" alt="">
           <div class="small-text">
-            <h3>Find Work As A Front End Developer</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
-        </a>
-      </div>
-
-      <div class="small-news-container">
-        <a href="https://skillcrush.com/blog/skills-to-become-a-front-end-developer/">
-          <img src="https://images.unsplash.com/photo-1557599443-2071a2df9c19?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2164&q=80" alt="">
-          <div class="small-text">
-            <h3>Exactly What You Need To Know To Become A Front End Developer In 2021</h3>
+            <h3>Think Out of the WebDev Box</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>  
         </a>
       </div>
+
+
+      <div class="small-news-container">
+        <a href="https://www.google.com">
+          <img src="https://images.unsplash.com/photo-1551808525-51a94da548ce?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1896&q=80" alt="">
+          <div class="small-text">
+            <h3>A Developer's Best Friend</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </a>
+     </div>
+
     </section>
   </body>
 </html>
