edit root links

--- a/code/index.html
+++ b/code/index.html
@@ -23,7 +23,7 @@
         <div class="desktop-menu-cnt">
           <div class="header-container">
             <!-- LOGO -->
-            <a href="./index.html" class="logo">
+            <a href="/" class="logo">
               <img src="./assets/logo.svg" alt="" />
             </a>
 
@@ -39,7 +39,7 @@
           <nav id="main-menu-cnt">
             <ul class="main-menu">
               <li class="main-menu-items">
-                <a href="./index.html">Home</a>
+                <a href="/">Home</a>
               </li>
               <li class="main-menu-items"><a href="/a">JS</a></li>
               <li class="main-menu-items"><a href="/b">Contact us</a></li>
