--- a/code/index.html
+++ b/code/index.html
@@ -41,9 +41,15 @@
               <li class="main-menu-items">
                 <a href="/">Home</a>
               </li>
-              <li class="main-menu-items"><a href="/a">JS</a></li>
-              <li class="main-menu-items"><a href="/b">Contact us</a></li>
-              <li class="main-menu-items"><a href="/c">About us</a></li>
+              <li class="main-menu-items">
+                <a href="./pages/landing.html" target="_blank">JS</a>
+              </li>
+              <li class="main-menu-items">
+                <a href="./pages/landing.html" target="_blank">Contact us</a>
+              </li>
+              <li class="main-menu-items">
+                <a href="./pages/landing.html" target="_blank">About us</a>
+              </li>
             </ul>
           </nav>
         </div>
@@ -55,7 +61,11 @@
     <main class="main-part">
       <div class="main-wrapper">
         <section class="big-news shadow">
-          <a href="" class="block big-news-img">
+          <a
+            href="./pages/news.html"
+            target="_blank"
+            class="block big-news-img"
+          >
             <img
               src="https://i.ytimg.com/vi/7X-d9MLysdI/maxresdefault.jpg"
               alt="JSworld Conference 2021"
@@ -64,7 +74,7 @@
           </a>
           <div class="big-news-content">
             <h1>
-              <a href="" class="news-title">
+              <a href="./pages/news.html" target="_blank" class="news-title">
                 JavaScript World Conference by Frontend Love</a
               >
             </h1>
@@ -84,7 +94,7 @@
         <section class="news-card-cnt">
           <ul class="">
             <li class="news-card shadow">
-              <a href="" class="block"
+              <a href="./pages/news.html" target="_blank" class="block"
                 ><img
                   src="https://cdn.stocksnap.io/img-thumbs/960w/woman-working_1LXJ2HZ9UY.jpg"
                   alt=""
@@ -99,7 +109,7 @@
               </div>
             </li>
             <li class="news-card shadow">
-              <a href="" class="block"
+              <a href="./pages/news.html" target="_blank" class="block"
                 ><img
                   src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80"
                   alt=""
@@ -114,7 +124,7 @@
               </div>
             </li>
             <li class="news-card shadow">
-              <a href="" class="block"
+              <a href="./pages/news.html" target="_blank" class="block"
                 ><img
                   src="https://cdn.stocksnap.io/img-thumbs/960w/woman-working_1LXJ2HZ9UY.jpg"
                   alt=""
@@ -129,7 +139,7 @@
               </div>
             </li>
             <li class="news-card shadow">
-              <a href="" class="block"
+              <a href="./pages/news.html" target="_blank" class="block"
                 ><img
                   src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80"
                   alt=""
@@ -144,7 +154,7 @@
               </div>
             </li>
             <li class="news-card shadow">
-              <a href="" class="block"
+              <a href="./pages/news.html" target="_blank" class="block"
                 ><img
                   src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80"
                   alt=""
@@ -159,7 +169,7 @@
               </div>
             </li>
             <li class="news-card shadow">
-              <a href="" class="block"
+              <a href="./pages/news.html" target="_blank" class="block"
                 ><img
                   src="https://cdn.stocksnap.io/img-thumbs/960w/woman-working_1LXJ2HZ9UY.jpg"
                   alt=""
@@ -174,7 +184,7 @@
               </div>
             </li>
             <li class="news-card">
-              <a href="" class="block"
+              <a href="./pages/news.html" target="_blank" class="block"
                 ><img
                   src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80"
                   alt=""
@@ -189,7 +199,7 @@
               </div>
             </li>
             <li class="news-card">
-              <a href="" class="block"
+              <a href="./pages/news.html" target="_blank" class="block"
                 ><img
                   src="https://cdn.stocksnap.io/img-thumbs/960w/woman-working_1LXJ2HZ9UY.jpg"
                   alt=""
