--- a/code/index.html
+++ b/code/index.html
@@ -100,7 +100,7 @@
         
         <figure class="small-news">
           <img class="small-news" src="/images/striped-socks.jpg" alt="Striped Socks">
-          <figcaption class="figcaption">Striped Socks the Easy Way &#8211; with Self-Striping Yarn</figcaption>
+          <figcaption class="figcaption">Striped Socks the Easy Way</figcaption>
         </figure>
 
         <figure class="small-news">
