added header background-image

--- a/code/index.html
+++ b/code/index.html
@@ -17,7 +17,7 @@
         <div class="nav-item">Month</div>
         </nav>  
         <div class="title-Neo"> 
-        <h1>Neo news</h1>      
+        <h1>NeoNews</h1>      
         </div>
         <div class="button">
           <button class="button1">Log in</button>
@@ -26,36 +26,43 @@
     </header>
 
     <section class="big-news-container">
-      <div class="news-card">
-      <img class="photo-bar" src="/img/fusion-medical-animation-rnr8D3FNUNY-unsplash.png" alt="image of Corona virus">
-     
-      <div class="text">
-      <p> 
+
+      <div class="w3-container">
+      <img class="photo-bar" src="/img/fusion-medical-animation-rnr8D3FNUNY-unsplash.png" alt="image of Corona virus" class="w3-image">
+      <p class="text"> 
         <h3>Coronavirus vaccine: What are human challenge trials?</h3>
         Volunteers are set to be deliberately infected with Covid-19 after the UK Government said it will set up human challenge trials to speed up the development of a vaccine.<br><br>
         Find <a href="https://www.smithsonianmag.com/science-nature/brief-history-human-challenge-trials-180976556/">A Brief History of Human Challenge Trials</a> here. 
-  
       </p>
-    </div>
       </div>
 
-      <div class="news-card">
-      <img class="photo-bar" src="/img/bryan-walker-EiG8v8mZxrE-unsplash.png" alt="Image of Harris Gin bottle">
-      <div class="text">
-        <h2>She Did It</h2>
-        <p>Kamala Harris, becomes the first woman, the first Asian American, and the first Black American to be elected vice president.
+      <div class="w3-container">
+      <img class="photo-bar" src="/img/rom-matibag-uffK6VXLKdc-unsplash.png" alt="Image of a banner saying Trump got dump 2020" class="w3-image">
+      <p class="text">  
+      <h3>She Did It</h3>
+        Kamala Harris, becomes the first woman, the first Asian American, and the first Black American to be elected vice president.
           <i>I can’t help but daydream about Harris someday stepping one level up to the presidency</i> says 
           Jemele Hill a contributing writer at <a href="https://www.theatlantic.com/world/">The Atlantic</a>.
         </p>
       </div>
+      
+      <div class="w3-container">
+      <img class="photo-bar" src="/img/antidepressiv.png" alt="Image of antidepressiv" class="w3-image">
+      <p class="text">
+        <h3>lkgdskgjh</h3>
+        dkjdngkfdjgndfg,fdngdfkgngdkjsn
+      </p>
+      </div>
+
+
+      <div class="w3-container">
+      <img class="photo-bar" src="/img/josue-michel-i9cTdRQIuUg-unsplash.png" alt="Image of person" class="w3-image">
+        <p class="text">
+          <h3>ddfgfdgfdg</h3>
+          dfgdgfkgnfkldgnldkjghfdlghdflg
+        </p>
     </div>
-      <div class="news-card">
-      <img class="photo-bar" src="/img/antidepressiv.png" alt="Image of antidepressiv">
-    </div>
-      <div class="news-card">
-      <img class="photo-bar" src="/img/josue-michel-i9cTdRQIuUg-unsplash.png" alt="Image of person">
-    </div>
-    </section>
+</section>
 
     <section class="more-news-container">
       <div class="news-card">Another vital area of understanding is how flexbox makes no assumption about the writing mode of the document. In the past, CSS was heavily weighted towards horizontal and left-to-right writing modes. Modern layout methods encompass the range of writing modes and so we no longer assume that a line of text will start at the top left of a document and run towards the right hand side, with new lines appearing one under the other.
