--- a/code/index.html
+++ b/code/index.html
@@ -30,66 +30,68 @@
         </div>
     </header>
 
-    <section class="big-news">
-      <section class="container">
-        <img class="responsive-image" src="alva-wet.jpg" alt="Alva getting wet"> 
-        <div class="big-news-text">
-          <h2>Looking back</h2>
-          <p>2020 - Year of the dog</p>
-        </div>
+    <main>
+      <section class="big-news">
+        <section class="container">
+          <img class="responsive-image" src="alva-wet.jpg" alt="Alva getting wet"> 
+          <div class="big-news-text">
+            <h2>Looking back</h2>
+            <p>2020 - Year of the dog</p>
+          </div>
+        </section>
       </section>
-    </section>
 
-    <section class="other-news">
-      <section class="container">
-          <img class="responsive-image" src="./alva-dot.jpg" alt="Alva in the woods"> 
-          <div class="other-news-text">
-            <h4>Casual stroll in the woods</h4>
-          </div>
+      <section class="other-news">
+        <section class="container">
+            <img class="responsive-image" src="./alva-dot.jpg" alt="Alva in the woods"> 
+            <div class="other-news-text">
+              <h4>Casual stroll in the woods</h4>
+            </div>
+        </section>
+        <section class="container">
+            <img class="responsive-image" src="./alva-field.jpg" alt="Alva on a field"> 
+            <div class="other-news-text">
+              <h4>Endless possibilities</h4>
+            </div>
+        </section>
+        <section class="container">
+            <img class="responsive-image" src="./alva-flamingo.jpg" alt="Alva with Flamingo toy"> 
+            <div class="other-news-text">
+              <h4>"Play with me, please!"</h4>
+            </div>
+        </section>
+        <section class="container">
+            <img class="responsive-image" src="./alva-grass.jpg" alt="Alva lying in the grass"> 
+            <div class="other-news-text">
+              <h4>Nothing beats the feeling of grass</h4>
+            </div>
+        </section>
+        <section class="container">
+            <img class="responsive-image" src="./alva-tongue-out.jpg" alt="Alva with her tongue out"> 
+            <div class="other-news-text">
+              <h4>The road to happiness</h4>
+            </div>
+        </section>
+        <section class="container">
+            <img class="responsive-image" src="./alva-woods.jpg" alt="Alva in the woods"> 
+            <div class="other-news-text">
+              <h4>That time I almost choked on a stick</h4>
+            </div>
+        </section>
+        <section class="container">
+            <img class="responsive-image" src="./alva-snowball.jpg" alt="Alva on a big snowball"> 
+            <div class="other-news-text">
+              <h4>How I became the Queen of everything</h4>
+            </div>
+        </section>
+        <section class="container">
+            <img class="responsive-image" src="./alva-sofa.jpg" alt="Alva on the sofa"> 
+            <div class="other-news-text">
+              <h4>Lazy days</h4>
+            </div>
+        </section>
       </section>
-      <section class="container">
-          <img class="responsive-image" src="./alva-field.jpg" alt="Alva on a field"> 
-          <div class="other-news-text">
-            <h4>Endless possibilities</h4>
-          </div>
-      </section>
-      <section class="container">
-          <img class="responsive-image" src="./alva-flamingo.jpg" alt="Alva with Flamingo toy"> 
-          <div class="other-news-text">
-            <h4>"Play with me, please!"</h4>
-          </div>
-      </section>
-      <section class="container">
-          <img class="responsive-image" src="./alva-grass.jpg" alt="Alva lying in the grass"> 
-          <div class="other-news-text">
-            <h4>Nothing beats the feeling of grass</h4>
-          </div>
-      </section>
-      <section class="container">
-          <img class="responsive-image" src="./alva-tongue-out.jpg" alt="Alva with her tongue out"> 
-          <div class="other-news-text">
-            <h4>Life's good</h4>
-          </div>
-      </section>
-      <section class="container">
-          <img class="responsive-image" src="./alva-woods.jpg" alt="Alva in the woods"> 
-          <div class="other-news-text">
-            <h4>That time I almost choked on a stick</h4>
-          </div>
-      </section>
-      <section class="container">
-          <img class="responsive-image" src="./alva-snowball.jpg" alt="Alva on a big snowball"> 
-          <div class="other-news-text">
-            <h4>How I became the Queen of everything</h4>
-          </div>
-      </section>
-      <section class="container">
-          <img class="responsive-image" src="./alva-sofa.jpg" alt="Alva on the sofa"> 
-          <div class="other-news-text">
-            <h4>Lazy days</h4>
-          </div>
-      </section>
-    </section>
+    </main>
 
     <footer>
       <div class="container-footer">
@@ -98,7 +100,6 @@
           <a href="#">Archive</a>
           <a href="#">Contact</a>
         </div>
-        <!-- <div class="container-channels"> -->
         <div class="container-social-media">
           <a href="#">
             <img src="./facebook.svg" alt="Facebook"> 
@@ -113,11 +114,6 @@
             Youtube 
           </a>
         </div>
-          <!-- <div class="container-email">
-              Email: 
-              <a href="mailto:someone@example.com">info@alva.se</a>
-          </div> -->
-        <!-- </div> -->
       </div>
     </footer>
   </body>
