--- a/code/index.html
+++ b/code/index.html
@@ -29,8 +29,16 @@
       <div class="right">
         <div class="hamburger"></div>
         <div class="subscribe">Subscribe</div>
-        <div class="weather">Snowy, –10°C</div>
+        <div class="weather">
+          <div class="lottie">
+            <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+            <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_wIcwHL.json"  background="transparent"  speed="0.2"  style="width: 50px; height: 40px;"  loop  autoplay></lottie-player>
+          </div>
+          <div class="weather-text">
+            Snowy, –10°C
+          </div>
       </div>
+    </div>
     </header>
     <nav>
       <div class="divider no-marg"></div>
@@ -48,40 +56,43 @@
         <li>Look nice</li>
       </ul>
     </nav>
+    <div class="divider no-marg"></div>
     <main>
-      <div class="divider no-marg"></div>
       <section class="podcasts">
         <div class="container">
           <div class="item">
             <img src="./resources/mathias-konrath-BBjW2qnIixc-unsplash.jpg" alt="">
             <div class="text">
-              <h3>Listen to 'The Daily'</h3> 
+              <h4>Listen to 'The Daily'</h4> 
               <p>“Restoring the first brick of dignity”: Biden supporters on his inauguration.</p> 
             </div>
           </div>
           <div class="item">
             <img src="./resources/cristian-newman-l9I93gZKTG4-unsplash.jpg" alt="">
             <div class="text">
-              <h3>Listen to 'The Daily'</h3> 
+              <h4>Listen to 'The Daily'</h4> 
               <p>“Restoring the first brick of dignity”: Biden supporters on his inauguration.</p> 
             </div>
           </div>  
           <div class="item">
             <img src="./resources/cristian-newman-A6O7pgc7vHg-unsplash.jpg" alt="">
             <div class="text">
-              <h3>Listen to 'The Daily'</h3> 
+              <h4>Listen to 'The Daily'</h4> 
               <p>“Restoring the first brick of dignity”: Biden supporters on his inauguration.</p> 
             </div>
           </div>
         </div>
-        <div class="divider"></div>
+        <div class="divider no-marg"></div>
+      </section>
+      <section class="lottie-experiment">
+        <div id="icon-container"></div>
       </section>
       <section class="top-news">
         <div class="optional text">
-          <h1>
+          <h3>
             Trump allies have collected tens of thousands of dollars from people seeking pardons, reflecting the access peddling that has defined his presidency.          </h1>
-          </h1>
-          <p>
+          </h3>
+          <p class="small">
             Trump allies have collected tens of thousands of dollars from people seeking pardons, reflecting the access peddling that has defined his presidency.
           </p>
         </div>
@@ -97,7 +108,9 @@
       <div class="divider"></div>
       <section class="full-length-news">
         <div class="text">
-          <h1>A kitten is a juvenile cat. After being born, kittens display primary altriciality and are totally dependent on their mother for survival. </h1>
+          <h2>
+            A kitten is a juvenile cat. After being born, kittens display primary altriciality and are totally dependent on their mother for survival. 
+          </h2>
           <p>They do not normally open their eyes until after seven to ten days. After about two weeks, kittens quickly develop and begin to explore the world outside the nest. After a further three to four weeks, they begin to eat solid food and grow adult teeth. Domestic kittens are highly social animals and usually enjoy human companionship.</p>
         </div>
       </section>
@@ -105,9 +118,9 @@
       <section class="small-news">
         <div class="story">
           <div class="text">
-            <h1>
+            <h2>
               Prospect of Pardons in Final Days Fuels Market to Buy Access to Trump
-            </h1>
+            </h2>
             <p>
               Trump allies have collected tens of thousands of dollars from people seeking pardons, reflecting the access peddling that has defined his presidency.
             </p>
@@ -118,7 +131,7 @@
         </div>
         <div class="story">
           <div class="text">
-            <h1>Undeterred by Theory’s Unraveling, a QAnon ‘Meme Queen’ Marches On</h1>
+            <h2>Undeterred by Theory’s Unraveling, a QAnon ‘Meme Queen’ Marches On</h2>
             <p>She posts dozens of times a day in support of an unhinged conspiracy theory. Her story hints at how hard it will be to bring some people back to reality, Kevin Roose writes.</p>
           </div>
           <div class="image">
@@ -127,9 +140,9 @@
         </div>
         <div class="story">
           <div class="text">
-            <h1>
+            <h2>
               Trump allies have collected tens of thousands of dollars from people seeking pardons, reflecting the access peddling that has defined his presidency.          </h1>
-            </h1>
+            </h2>
             <p>
               Trump allies have collected tens of thousands of dollars from people seeking pardons, reflecting the access peddling that has defined his presidency.
             </p>
@@ -140,9 +153,9 @@
         </div>
         <div class="story">
           <div class="text">
-            <h1>
+            <h2>
               Guinea pig, (Cavia porcellus), a domesticated species of South American rodent belonging to the cavy family (Caviidae).
-            </h1>
+            </h2>
             <p>
               It resembles other cavies in having a robust body with short limbs, large head and eyes, and short ears. The feet have hairless soles and short sharp claws. There are four toes on the forefeet and three on the hind feet. Several breeds of domesticated guinea pigs exist, which are sometimes grouped by coat texture and hair length. The term guinea pig is also used colloquially to refer to a person who serves as a test subject in an experiment.
             </p>
@@ -160,8 +173,11 @@
           </p>
         </div> -->
       </section>
+      <section class="grid-news">
+        <div                                                                                                                                                    ></div>
+      </section>
+      <div class="divider"></div>
     </main>
-    <div class="divider"></div>
     <!-- <div class="divider"></div> -->
     <footer>Hi you've reached the footer</footer>
     <!-- <script src="./script.js"></script> -->
