correction of title

--- a/code/index.html
+++ b/code/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Push 7: Project 2: Succulent world</title>
+    <title>Succulent world</title>
     <link rel="stylesheet" href="./style.css"/>
     <link rel="icon" href="./img/icons8-succulent.png" type="image/gif" sizes="16x16">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
