Main news section and general styling. Initial setup for responsiveness

--- a/code/index.html
+++ b/code/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <!-- Header, Logotype, Name of site and Menu -->
+    <!-- Logotype, Name of site and Menu -->
     <header class="header">
         <img class="logo" src="./Silhuette-Logotype-with-circle.svg" alt="Logotype">
         <h1 class="newspaper-name">The Fashionable Update</h1>
@@ -25,22 +25,35 @@
 
     <!-- The Big News -->
     <section class="big-news">
-
-        <div></div>
-    </section>
-
-    <!-- The Smaller News  -->
-    <section class="smaller-news">
-
-        <div class="news-card">
+        <div class="main-news-card">
             <div class="couture">
                 <img src="./Couture.jpg" alt="Augusta Lundin Exhibition">
                 <div class="heading-couture">
                     <h2>Final Call for <span style="font-family: lucida calligraphy; font-size: 20px; text-decoration: underline; font-style: italic; color: rgba(30, 29, 31, 0.842);">Augusta Lundin - The First Fashion House in Sweden:</span> Exhibition to
                         close on Sunday</h2>
+                    <div class="text-couture">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget pellentesque sapien. In rutrum lorem ac tortor suscipit dictum. Quisque venenatis felis odio, eu porta est sodales ut. Nunc tempor magna id orci bibendum varius.
+                            Donec tincidunt accumsan erat in dignissim. In odio purus, vulputate sed massa sit amet, commodo vulputate velit. Etiam tellus elit, hendrerit id fermentum at, gravida eu nulla. In venenatis nulla at gravida imperdiet. Duisac
+                            augue tortor.
+                            <br>
+                            <br> Praesent cursus ut eros vehicula tempor. Fusce venenatis risus enim, ac accumsan magna commodo ut. Nunc ultrices, augue vitae pulvinar malesuada, tellus sem imperdiet justo, quis maximus lacus arcu ut turpis. Proin non
+                            sapien pharetra, ultricies tortor quis, pretium leo. Quisque justo neque, iaculis porta est sed, pharetra feugiat leo. Quisque turpis velit, dignissim vel hendrerit eu, vulputate efficitur eros. Morbi odio augue, commodo at
+                            leo nec, pharetra gravida dolor. Duis nec posuere mauris. In odio purus, vulputate sed massa sit amet, commodo vulputate velit.
+                            <br>
+                            <br> Donec mauris risus, consequat non est vehicula, dapibus dignissim ligula. Aliquam interdum ante vitae arcu aliquam, at imperdiet lacus pharetra. Mauris id accumsan ante. Interdum et malesuada fames ac ante ipsum primis
+                            in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum sollicitudin sapien a tempor scelerisque. Donec vitae sollicitudin lectus, ut ultricies lectus. Donec pretium
+                            laoreet dapibus. In odio purus, vulputate sed massa sit amet, commodo vulputate velit.
+                            <br>
+                            <br> Etiam egestas, dui ac ultricies vestibulum, orci ex hendrerit nunc, vel dictum lectus mi ac velit. Quisque sed cursus arcu, quis ultricies sapien. Ut interdum sapien scelerisque augue semper efficitur. Donec mauris risus,
+                            consequat non est vehicula, dapibus dignissim ligula. Aliquam interdum ante vitae arcu aliquam, at imperdiet lacus pharetra. Mauris id accumsan ante. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque
+                            habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    </div>
                 </div>
             </div>
-        </div>
+    </section>
+
+    <!-- The Smaller News  -->
+    <section class="smaller-news">
 
         <div class="news-card">
             <div class="greenwashing">
@@ -53,10 +66,20 @@
         </div>
 
         <div class="news-card">
+            <div class="billie-holiday">
+                <img src="./Prada-Billie-Holiday.jpg" alt="Prada to do costume for Bille Holiday movie">
+                <div class="heading-billie">
+                    <h2>Iconic fashion house <span style="font-family: lucida calligraphy; font-size: 20px; text-decoration: underline; font-style: italic; color: rgba(30, 29, 31, 0.842);">Prada</span> to make costumes for Billie Holiday in upcoming biopic</h2>
+                </div>
+            </div>
+        </div>
+
+        <div class="news-card">
             <div class="silk-scarves">
                 <img src="./Silk-Scarves.jpg" alt="Silk Stories to launch collection">
                 <div class="heading-scarves">
-                    <h2>Independent label <span style="font-family: lucida calligraphy; font-size: 20px; text-decoration: underline; font-style: italic; color: rgba(30, 29, 31, 0.842);">The Silk Stories</span> to launch their SS21 collection</h2>
+                    <h2>Independent label <span style="font-family: lucida calligraphy; font-size: 20px; text-decoration: underline; font-style: italic; color: rgba(30, 29, 31, 0.842);">The Silk Stories</span> to launch their SS21 collection influenced by
+                        the Lombardian summers</h2>
                 </div>
             </div>
         </div>
@@ -65,7 +88,9 @@
             <div class="me-too">
                 <img src="./Me-Too.jpg" alt="#me too is changing the fashion industry">
                 <div class="heading-me-too">
-                    <h2>How <span style="font-family: lucida calligraphy; font-size: 20px; text-decoration: underline; font-style: italic; color: rgba(30, 29, 31, 0.842);">#me too</span> is changing the fashion industry: Tales from the inside</h2>
+                    <h2>How <span style="font-family: lucida calligraphy; font-size: 20px; text-decoration: underline; font-style: italic; color: rgba(30, 29, 31, 0.842);">#me too</span> is changing the fashion industry: Tales from inside the worlds biggest
+                        brands
+                    </h2>
                 </div>
             </div>
         </div>
@@ -74,7 +99,9 @@
             <div class="embroidery">
                 <img src="./World-Embroidery.jpg" alt="Embroidery is back!">
                 <div class="heading-embroidery">
-                    <h2><span style="font-family: lucida calligraphy; font-size: 20px; text-decoration: underline; font-style: italic; color: rgba(30, 29, 31, 0.842);">Embroidery is back!</span> Practise your skills and get inspired by the professionals</h2>
+                    <h2><span style="font-family: lucida calligraphy; font-size: 20px; text-decoration: underline; font-style: italic; color: rgba(30, 29, 31, 0.842);">Embroidery is back!</span> Practise your skills getting inspired (and provoked) by the
+                        professionals
+                    </h2>
                 </div>
             </div>
         </div>
@@ -83,13 +110,13 @@
             <div class="music">
                 <iframe src="https://open.spotify.com/embed/track/1ByVGqBt33n0iT5wgbwVzN" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                 <div class="heading-music">
-                    <h2>Wanna know that´s in our heads? Check out tune of the week by Stockholm post-punk band <span style="font-family: lucida calligraphy; font-size: 20px; text-decoration: underline; font-style: italic; color: rgba(30, 29, 31, 0.842);">Viagra Boys</span></h2>
+                    <h2>Wanna know what´s in our heads? Check out tune of the week by Stockholm post-punk quintet <span style="font-family: lucida calligraphy; font-size: 20px; text-decoration: underline; font-style: italic; color: rgba(30, 29, 31, 0.842);">Viagra Boys</span></h2>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Footer, Copyright and Social Media  -->
+    <!-- Copyright and Social Media  -->
     <footer class="footer">
         <div class="copyright">
             <p>&copy; The Fashionable Update</p>
