--- a/previous_artists/joy.html
+++ b/previous_artists/joy.html
@@ -11,16 +11,13 @@
   </head>
 
   <body>
-    <div class="header"> <!-- Some kind of logo and navbar -->  
+    <header> 
       <h1>Noemi's Music Magazine <img src="../images/logo.jpg" alt="Logo" height="40px"> </h1>
-    </div>
       <nav>
-        <ul>
-          <div><li><a href="../code/index.html">Home</a></li></div>
-          <div><li>Concerts</li></div>
-          <div><li>Events</li></div>
-          <div><li>About</li></div>
-        </ul>
+        <div><a href="../code/index.html">Home</a></div>
+        <div>Concerts</div>
+        <div>Events</div>
+        <div>About</div>
       </nav>
     </header>
 
